<resources>
    <string name="app_name">Calculadora</string>

    <string name="datoInicial"></string>

    <string name="bt_1">1</string>
    <string name="bt_2">2</string>
    <string name="bt_3">3</string>
    <string name="bt_4">4</string>
    <string name="bt_5">5</string>
    <string name="bt_6">6</string>
    <string name="bt_7">7</string>
    <string name="bt_8">8</string>
    <string name="bt_9">9</string>
    <string name="bt_0">0</string>

    <string name="bt_Suma">+</string>
    <string name="bt_Resta">-</string>
    <string name="bt_Multiplicacion">*</string>
    <string name="bt_Division">/</string>
    <string name="bt_Igual">=</string>
    <string name="bt_Borrar">C</string>


    <string name="buscar">Buscar</string>
</resources>